--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <title>Homepage - Maww</title>
 </head>
 <body>
+  ![alt text](https://github.com/MawwFa/Website/blob/main/Foto/foto1.png?raw=true)
+  ![alt text](https://github.com/MawwFa/Website/blob/main/Foto/foto8.png?raw=true)
+
   <header>
   <!--Navigation Bar-->
   <nav class="navbar">
