--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
   <title>Homepage - Maww</title>
 </head>
 <body>
-  ![alt text](https://github.com/MawwFa/Website/blob/main/Foto/foto1.png?raw=true)
-  ![alt text](https://github.com/MawwFa/Website/blob/main/Foto/foto8.png?raw=true)
 
   <header>
   <!--Navigation Bar-->
@@ -169,7 +167,7 @@
     <div class="home-img">
       <div class="img-box">
         <div class="img-item">
-          <img style="--i:1" src="foto/foto1.png">
+          <img style="--i:1" src="README.md/foto1.png">
         </div>
       </div>
     </div>
@@ -177,7 +175,7 @@
 
   <section id="about" class="about">
     <div class="img-about">
-      <img src="foto/foto8.png" width="200">
+      <img src="README.md/foto8.png" width="200">
     </div>
     
     <div class="about-content">
